# Whatsapp-web.pyy

./: README.md  example_usage.py  pyproject.toml  web_interface.py
templates/: index.html
whatsapp_web_py/: __init__.py  client.py
whatsapp_web_py/auth/: __init__.py  qr_auth.py  session_manager.py
whatsapp_web_py/crypto/: __init__.py  aes.py  curve.py  hkdf.py
whatsapp_web_py/messages/: __init__.py
whatsapp_web_py/protocol/: __init__.py
whatsapp_web_py/websocket/: __init__.py  connection.py  handler.py
